--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@nestjs/jwt": "^9.0.0",
 		"@nestjs/passport": "^9.0.0",
 		"@nestjs/platform-express": "^9.0.7",
+		"@nestjs/swagger": "^6.0.4",
 		"@prisma/client": "^4.0.0",
 		"argon2": "^0.28.7",
 		"class-transformer": "^0.5.1",
@@ -42,9 +43,9 @@
 		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
-		"@nestjs/cli": "^8.0.0",
-		"@nestjs/schematics": "^8.0.0",
-		"@nestjs/testing": "^8.0.0",
+		"@nestjs/cli": "^8.2.8",
+		"@nestjs/schematics": "^8.0.11",
+		"@nestjs/testing": "^8.4.7",
 		"@types/express": "^4.17.13",
 		"@types/jest": "27.5.0",
 		"@types/node": "^16.0.0",
