--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
 		"@nestjs/swagger": "^6.0.4",
 		"@prisma/client": "^4.0.0",
 		"argon2": "^0.28.7",
+		"cache-manager": "^4.1.0",
+		"cache-manager-redis-store": "^2.0.0",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.13.2",
 		"nodemailer": "^6.7.7",
@@ -46,6 +48,8 @@
 		"@nestjs/cli": "^8.2.8",
 		"@nestjs/schematics": "^8.0.11",
 		"@nestjs/testing": "^8.4.7",
+		"@types/cache-manager": "^4.0.1",
+		"@types/cache-manager-redis-store": "^2.0.1",
 		"@types/express": "^4.17.13",
 		"@types/jest": "27.5.0",
 		"@types/node": "^16.0.0",
